# package-vdb

./: BUILD.md  LICENCE  README.md  defaults.yaml  pyproject.toml
cloud_dog_vdb/: __init__.py  factory.py
cloud_dog_vdb/access/: __init__.py  enforcement.py  policy.py
cloud_dog_vdb/adapters/: __init__.py  base.py  chroma.py  factory.py  infinity.py  opensearch.py  pgvector.py  qdrant.py  registry.py  vector_utils.py  weaviate.py
cloud_dog_vdb/capabilities/: __init__.py  models.py  planner.py
cloud_dog_vdb/collections/: __init__.py  manager.py  specs.py
cloud_dog_vdb/compat/: __init__.py  response_normaliser.py
cloud_dog_vdb/config/: __init__.py  models.py
cloud_dog_vdb/domain/: __init__.py  enums.py  errors.py  models.py
cloud_dog_vdb/embeddings/: __init__.py  base.py  providers.py
cloud_dog_vdb/ingestion/: __init__.py  acquire.py  checkpoints.py  embed.py  pipeline.py  verify.py
cloud_dog_vdb/integrations/: __init__.py  langchain.py  llamaindex.py
cloud_dog_vdb/isolation/: __init__.py  manager.py
cloud_dog_vdb/jobs/: __init__.py  models.py  queue.py  status.py  worker.py
cloud_dog_vdb/lifecycle/: __init__.py  manager.py  retention.py
cloud_dog_vdb/metadata/: __init__.py  filters.py  identity.py  normalise.py  provenance.py  schema.py
cloud_dog_vdb/observability/: __init__.py  audit.py  metrics.py  otel.py
cloud_dog_vdb/options/: __init__.py  chroma.py  common.py  manager.py  opensearch.py  pgvector.py  qdrant.py  weaviate.py
cloud_dog_vdb/remote/: __init__.py  client.py
cloud_dog_vdb/runtime/: __init__.py  client.py  factory.py
(+122 files in other folders)
