[project]
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
name = "cloud-dog-vdb"
version = "0.5.3"
description = "PS-60 Vector DB Interfaces for Cloud-Dog services"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pypdf>=4.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
config = ["cloud-dog-config>=0.1.0"]
logging = ["cloud-dog-logging>=0.1.0"]
llm = ["cloud-dog-llm>=0.1.0"]
jobs = ["cloud-dog-jobs>=0.1.0"]
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.9"]
weaviate = ["weaviate-client>=4.5"]
opensearch = ["opensearch-py>=2.5"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.2"]
pandas = ["pandas>=2.0"]
otel = ["opentelemetry-api>=1.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-p no:cloud_dog_config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/platform-vdb"
